package com.michel.vkmap.data.models

data class LocationDataPackModel(
    val latitude: Double,
    val longitude: Double,
    val userId: String
)