package com.michel.vkmap.domain.models

data class LocationModel(val latitude: Double, val longitude: Double)